# distri

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  dockerfile.client  dockerfile.server  dockerfile.server1
example/: Cargo.toml  Makefile  stats_db.csv  stats_encrypt.csv
example/resources/borrowed/: img.jpg.encrp  unknown.encrp
example/src/: app.rs  main.rs  utils.rs
src/: client.rs  cloud.rs  fekry.rs  lib.rs  peer.rs  utils.rs
tests/: client_tests.rs
