[package]
name = "distri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"  # Use the latest compatible version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
proc-macro = true