[package]
name = "distri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
image = "0.25.4"
sha2 = "0.10"  # Use the latest compatible version
steganography = "1.0.2"
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"

[[bin]]
name = "cloud"
path = "src/cloud.rs"

[[bin]]
name = "client"
path = "src/client.rs"