[package]
name = "distri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = "4.5.20"
engine = "0.0.0"
image = "0.25.4"
sha2 = "0.10"  # Use the latest compatible version
steganography = "1.0.2"
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"
serde_json = "1.0.132"
regex = "1.11.1"
colored = "2.1.0"
winit = "0.28.6"
pixels = "0.14.0"
tempfile = "3.14.0"


[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
