[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
steganography = "1.0.2"
tokio = { version = "1.41.0", features = ["full"] }
distri = { path = "../" }  # Path to your custom library
rand = { version = "0.8.5", features = ["std_rng"] }
clap = {version = "4.5.9", features = ["derive"]}
serde_json = "1.0.132"
base64 = "0.22.1"
regex = "1.11.1"
winit = "0.28.6"
pixels = "0.14.0"
image = "0.25.5"
show-image = "0.13.1"


[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
